hphp/hack/test/typecheck/constraint_array_index/after/null.php.exp
ERROR: File "null.php", line 3, characters 3-11:
You are trying to access an element of this container but the container could be `null`.  (Typing[4063])
  File "null.php", line 3, characters 3-6:
  This is what makes me believe it can be `null`
