hphp/hack/test/typecheck/constraint_array_index/after/null.php
<?hh
function f(): void {
  null["a"];
}
